# auth_service

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
accounts/: Dockerfile  pyproject.toml
accounts/config/: .env.example  settings.py
accounts/migrations/: 0001_create_accounts.down.sql  0001_create_accounts.up.sql
accounts/package/: __init__.py
accounts/src/: app.py  exceptions.py
accounts/src/api/v1/: router.py
accounts/src/api/v1/accounts/: __init__.py  create.py  get.py  get_all.py  get_by_telegram_id.py  router.py
accounts/src/api/v1/healthcheck/: readiness.py
accounts/src/dao/: __init__.py  accounts.py
accounts/src/dto/: __init__.py  account.py
accounts/src/enums/: __init__.py
accounts/src/enums/postgres/: locks.py  unary_logic_operators.py
accounts/src/repositories/: __init__.py  accounts.py
accounts/src/schemas/: __init__.py
accounts/src/schemas/accounts/: __init__.py  account.py  create_account.py
accounts/src/services/: __init__.py  accounts.py
accounts/src/specifications/: base.py
accounts/src/specifications/binary_logic/: disjunction.py
accounts/src/specifications/compare/: __init__.py  base.py  greater_than.py
accounts/src/storages/: __init__.py
auth/: Dockerfile  pyproject.toml
config/: .env.example  __init__.py  logger.py  settings.py
migrations/: 0001_create_jwk_storage.down.sql  0001_create_jwk_storage.up.sql  0002_add_primary_jwk_field.down.sql  0002_create_authentication_tables.down.sql  0002_create_authentication_tables.up.sql  0003_add_apps.down.sql  0003_add_apps.up.sql  0003_delete_identity_main_flag.down.sql  0003_delete_identity_main_flag.up.sql  0004_add_soft_deletes_and_token_expiration.down.sql  0004_add_soft_deletes_and_token_expiration.up.sql  0004_remove_provider_type.down.sql  0004_remove_provider_type.up.sql  0005_drop_jwks_name_constraint.down.sql  0005_drop_jwks_name_constraint.up.sql  0006_create_uq_jwks_name_constraint.down.sql  0006_create_uq_jwks_name_constraint.up.sql  0007_remove_expires_at_session_field.down.sql  0007_remove_expires_at_session_field.up.sql  0008_add_provider_type.down.sql  0008_add_provider_type.up.sql  0009_provider_type_index.down.sql  0009_provider_type_index.up.sql  0015_create_login_uq_index.down.sql  (+11 more)
(+553 files in other folders)
