[project]
name = "auth"
version = "0.1.0"
description = "Base JWT Auth Service"
authors = [
    {name = "TiRe",email = "zientenin@mail.ru"}
]
readme = "README.md"
requires-python = "3.13.11"
dependencies = [
    "fastapi (>=0.120.2,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "orjson (>=3.11.4,<4.0.0)",
    "jwcrypto (>=1.5.6,<2.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "dependency-injector[fastapi] (>=4.48.3,<5.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.coverage.run]
source = ["src"] 
omit = [
    "tests/*",
    "*/dependency_injector/providers.pyx"
]
