[project]
name = "accounts"
version = "0.1.0"
description = "Accounts Service for Auth"
authors = [
    {name = "TiRe",email = "zientenin@mail.ru"}
]
readme = "README.md"
requires-python = "3.13.7"
dependencies = [
    "fastapi (>=0.120.2,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "orjson (>=3.11.4,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
